// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackBar component should match snapshots 1`] = `
.c6 {
  margin-right: 5px;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c4 .c5 {
  font-size: 24px;
}

.c4:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c4:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  bottom: 30px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  left: calc(50%/2);
  min-height: 48px;
  padding: 13px 16px;
  position: fixed;
}

.c1 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c3 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c3:hover,
.c3:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c3:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c3:hover,
.c3:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c2 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
  role="dialog"
>
  <strong
    className="c1"
  >
    Text of SnackBar component
  </strong>
  <a
    className="c2"
    href="/"
  >
    action
  </a>
  <button
    aria-label="close SnackBar"
    className="c3 c4"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c5 c6"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</div>
`;

exports[`SnackBar component should match snapshots 2`] = `
.c6 {
  margin-right: 5px;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c4 .c5 {
  font-size: 24px;
}

.c4:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c4:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  bottom: 30px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  left: calc(50%/2);
  min-height: 48px;
  padding: 13px 16px;
  position: fixed;
}

.c1 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c3 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c3:hover,
.c3:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c3:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c3:hover,
.c3:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c2 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
  role="dialog"
>
  <strong
    className="c1"
  >
    SnackBar message content 
  </strong>
  <a
    className="c2"
    href="/"
  >
    action
  </a>
  <button
    aria-label="close SnackBar"
    className="c3 c4"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c5 c6"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</div>
`;

exports[`SnackBar component should match snapshots 3`] = `
.c6 {
  margin-right: 5px;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c4 .c5 {
  font-size: 24px;
}

.c4:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c4:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  bottom: 30px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  left: calc(50%/2);
  min-height: 48px;
  padding: 13px 16px;
  position: fixed;
}

.c1 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c3 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c3:hover,
.c3:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c3:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c3:hover,
.c3:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c2 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
  role="dialog"
>
  <strong
    className="c1"
  >
    Text of SnackBar component
  </strong>
  <a
    className="c2"
    href="/"
  >
    action
  </a>
  <button
    aria-label="close SnackBar"
    className="c3 c4"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c5 c6"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</div>
`;

exports[`SnackBar component should match snapshots 4`] = `
.c6 {
  margin-right: 5px;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c4 .c5 {
  font-size: 24px;
}

.c4:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c4:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  bottom: 30px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  left: calc(50%/2);
  min-height: 48px;
  padding: 13px 16px;
  position: fixed;
}

.c1 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c3 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c3:hover,
.c3:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c3:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c3:hover,
.c3:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c2 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
  role="dialog"
>
  <strong
    className="c1"
  >
    Text of SnackBar component
  </strong>
  <a
    className="c2"
    href="/"
  >
    action
  </a>
  <button
    aria-label="close"
    className="c3 c4"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c5 c6"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</div>
`;

exports[`SnackBar component should match snapshots 5`] = `
.c6 {
  margin-right: 5px;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c4 .c5 {
  font-size: 24px;
}

.c4:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c4:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c4:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #002f7b;
  border-radius: 4px;
  bottom: 30px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  left: calc(50%/2);
  min-height: 48px;
  padding: 13px 16px;
  position: fixed;
}

.c1 {
  font-weight: normal;
  max-width: 344px;
  padding-right: 8px;
}

.c3 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  color: #FFFFFF;
}

.c3:hover,
.c3:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c3:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

.c3:hover,
.c3:focus {
  background-color: transparent;
  box-shadow: none;
  color: #FFFFFF;
}

.c2 {
  color: #FFFFFF;
  font-weight: bold;
  padding: 13px 8px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
  role="dialog"
>
  <strong
    className="c1"
  >
    Text of SnackBar component
  </strong>
  <a
    className="c2"
    href="/"
  >
    action
  </a>
  <button
    aria-label="close SnackBar"
    className="c3 c4"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c5 c6"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</div>
`;
